--- a/.github/workflows/kinetic.yml
+++ b/.github/workflows/kinetic.yml
@@ -6,13 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     name: kinetic
 
-    container: jskrobotics/ros-ubuntu:16.04
+    container: ubuntu:16.04
 
     steps:
       - name: Install latest git (use sudo for ros-ubuntu, remove sudo for ubuntu container), checkout@v2 uses REST API for git<2.18, which removes .git folder and does not checkout .travis submodules
-        run: sudo apt-get update && sudo apt-get install -y software-properties-common && sudo apt-get update && sudo add-apt-repository -y ppa:git-core/ppa && sudo apt-get update && sudo apt-get install -y git
-      - name: Before Checkout # need for actions/checkout with ros-ubuntu container
-        run: sudo chown -R user:jenkins $RUNNER_WORKSPACE $HOME
+        run: |
+          (apt-get update && apt-get install -y sudo) || echo "OK"
+          sudo apt-get update && sudo apt-get install -y software-properties-common && sudo apt-get update && sudo add-apt-repository -y ppa:git-core/ppa && sudo apt-get update && sudo apt-get install -y git
+      - name: work around permission issue  # https://github.com/actions/checkout/issues/760#issuecomment-1097501613
+        run: |
+          set -x
+          export USER=$(whoami)
+          git config --global --add safe.directory $GITHUB_WORKSPACE || echo "OK" # Show 'could not lock config file /github/home/.gitconfig: Permission denied', but it is ok
+          sudo mkdir -p /__w/
+          sudo chmod 777 -R /__w/
+          sudo chown -R $USER $HOME
       - name: Checkout
         uses: actions/checkout@v3.0.2
         with:
