--- a/.github/workflows/noetic.yml
+++ b/.github/workflows/noetic.yml
@@ -45,7 +45,7 @@ jobs:
           ROS_PARALLEL_JOBS: "-j8"
           USE_DEB: false
           NOT_TEST_INSTALL: true
-          ROSDEP_ADDITIONAL_OPTIONS: "-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl --skip-keys=roseus_mongo --skip-keys=pr2_moveit_config --skip-keys=pr2_moveit_plugins --skip-keys=jsk_pr2_startup --skip-keys=pddl_planner"
+          ROSDEP_ADDITIONAL_OPTIONS: "-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl --skip-keys=roseus_mongo --skip-keys=pr2_moveit_config --skip-keys=pr2_moveit_plugins --skip-keys=jsk_pr2_startup"
           # XXX: hotfix for chainer problem (https://github.com/chainer/chainer/issues/8545)
           # Use apt-version scipy and skimage which are compatible with apt-version numpy
           BEFORE_SCRIPT: "sudo apt-get install -y -q python3-scipy python3-skimage; pip3 install fcn chainercv chainer==6.7.0 gdown==4.4.0"
