--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -98,6 +98,9 @@ RUN if [ ${TESTING} = "true" ] ; then \
       cd ~/ros/${ROS_DISTRO} && \
       if [ ${ROS_DISTRO} = "indigo" ]; then \
         catkin build jsk_apc2015_common jsk_apc2016_common jsk_arc2017_common jsk_2015_05_baxter_apc jsk_2016_01_baxter_apc jsk_arc2017_baxter selective_dualarm_stowing sphand_driver sphand_driver_msgs vl53l0x_mraa_ros baxtergv6_apc2016;\
+      elif [ ${ROS_DISTRO} = "kinetic" ]; then \
+        catkin config --blacklist test_catkin_virtualenv test_catkin_virtualenv_py3_isolated test_catkin_virtualenv_inherited && \
+        catkin build; \
       else \
         catkin build; \
       fi; \
